version/0.21/_sources/api/solver/_autosummary/settings/quadrature_moment_boundary_value.rst.txt
:orphan:

.. _quadrature_moment_boundary_value:

quadrature_moment_boundary_value
================================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.quadrature_moment_boundary_value.quadrature_moment_boundary_value
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`variables_child <variables_child>`


.. rubric:: Included in:

==============================================   ================================

Parent                                                                    Summary

==============================================   ================================
:ref:`population_balance <population_balance>`       Population balance settings.

:ref:`multiphase <multiphase_6>`                              Help not available.

==============================================   ================================

